# TRP1-Week2-FDE-automaton-auditor

./: .env  .env.example  README.md  pyproject.toml
reports/: interim_report.md
src/: graph.py  state.py
src/nodes/: aggregator.py  detectives.py  doc_analyst.py  judges.py  justice.py  repo_investigator.py  setup.py
src/tools/: doc_tools.py  repo_tools.py
